--- a/components/sections/TransitionSection.module.css
+++ b/components/sections/TransitionSection.module.css
@@ -3,5 +3,7 @@
   height: 100vh;
   min-height: 100vh;
   width: 100%;
-  background: transparent;
+  margin-top: -1px;
+  margin-bottom: -1px;
+  background: var(--bg-deep);
 }
